--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@starsoul/editorconfig",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "keywords": ["editorconfig", "cli", "tools"],
   "description": "Generate .editorconfig file.",
   "repository": "https://github.com/lijiangwei/editorconfig.git",
   "main": "index.js",
@@ -20,8 +21,6 @@
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^3.0.0",
-    "download-git-repo": "^2.0.0",
-    "inquirer": "^7.0.0",
-    "ora": "^3.4.0"
+    "inquirer": "^7.0.0"
   }
 }
